<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/grey_2"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="38dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@color/grey_5"
            app:cardCornerRadius="10dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <include
            android:id="@+id/cv_search"
            layout="@layout/component_modal_search_card" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/complex_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_complex_route" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <TextView
                    style="@style/text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complex_route"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/to_anywhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_anywhere" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <TextView
                    style="@style/text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_anywhere"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/weekends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_weekend" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <TextView
                    style="@style/text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekends"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_hot" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <TextView
                    style="@style/text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_tickets"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/grey_3"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/city_istanbul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@null"
                            android:scaleType="centerCrop"
                            android:src="@drawable/city_istanbul" />
                    </androidx.cardview.widget.CardView>

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/title_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/istanbul"
                            android:textColor="@color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="4dp" />

                        <TextView
                            style="@style/text_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/popular_place"
                            android:textColor="@color/grey_5" />
                    </LinearLayout>


                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/grey_5" />

                <LinearLayout
                    android:id="@+id/city_sochi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@null"
                            android:scaleType="centerCrop"
                            android:src="@drawable/city_sochi" />
                    </androidx.cardview.widget.CardView>

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/title_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sochi"
                            android:textColor="@color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="4dp" />

                        <TextView
                            style="@style/text_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/popular_place"
                            android:textColor="@color/grey_5" />
                    </LinearLayout>


                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_5" />

                <LinearLayout
                    android:id="@+id/city_pxuket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@null"
                            android:scaleType="centerCrop"
                            android:src="@drawable/city_pxuket" />
                    </androidx.cardview.widget.CardView>

                    <Space
                        android:layout_width="8dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/title_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pxuket"
                            android:textColor="@color/white" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="4dp" />

                        <TextView
                            style="@style/text_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/popular_place"
                            android:textColor="@color/grey_5" />
                    </LinearLayout>


                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="8dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_5" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.cardview.widget.CardView>